fix tab alignment

--- a/src/ui/view/application.css
+++ b/src/ui/view/application.css
@@ -101,6 +101,8 @@
 .tab-pane
 {
     -fx-tab-min-width:90px;
+    -fx-tab-min-height: 2em;
+    -fx-tab-max-height: 2em;
     /*
     -fx-border-width: 0 1.3 1.3 1.3;
     -fx-border-color: 
